# clneural

./: ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  ConvolutionalLayer.cpp  ConvolutionalLayer.h  FullFeedforwardLayer.cpp  FullFeedforwardLayer.h  ImageDataset.cpp  ImageDataset.h  LinearActivationFunction.cpp  LinearActivationFunction.h  Logger.cpp  Logger.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkLayer.cpp  NeuralNetworkLayer.h  OpenCLInterface.cpp  OpenCLInterface.h  README.md  RandomGenerator.cpp  RandomGenerator.h  SigmoidActivationFunction.cpp  SigmoidActivationFunction.h  SubsamplingLayer.cpp  SubsamplingLayer.h  TanhActivationFunction.cpp  TanhActivationFunction.h  main.cpp
